--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
-  <title>Wendy's World</title>
+  <title>Wendy Lauber/title>
 
 </head>
 <body>
-<p>Hello</p>
+<h1>Introduction</h1>
+<p>Professional Experience</p>
+<ul>
+  <li><a href="https://www.kim-dojo.ch">My Karate Dojo</a></li>
+  <li>Examples</li>
 </body>
 </html>
