--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Wendy Lauber/title>
+  <title>Wendy Lauber</title>
 
 </head>
 <body>
@@ -9,5 +9,6 @@
 <ul>
   <li><a href="https://www.kim-dojo.ch">My Karate Dojo</a></li>
   <li>Examples</li>
+</ul>
 </body>
 </html>
