--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<h1>Introduction</h1>
+  <div id="header">
+    <h1>It's not the destination, but the <span class="color">journey!</span></h1>
+  </div>
+  <div id="content">
 <p>Professional Experience</p>
 <ul>
   <li><a href="https://www.kim-dojo.ch">My Karate Dojo</a></li>
   <li>Examples</li>
 </ul>
+</div>
 </body>
 </html>
