--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </head>
 <body>
   <div id="header">
-    <h1>It's not the destination, but the <span class="color">journey!</span></h1>
+    <h1>W W</h1>
   </div>
   <div id="content">
-<p>Professional Experience</p>
+<p>It's not the destination, but the <span class="color">journey!</span></p>
 <ul>
+  <li>Professional Experience</li>
   <li><a href="https://www.kim-dojo.ch">My Karate Dojo</a></li>
   <li>Examples</li>
 </ul>
